added pycache to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ images
 convolutional_pose_machines_tensorflow/models/weights
 convolutional_pose_machines_tensorflow/output
 convolutional_pose_machines_tensorflow/test_imgs
+__pycache__
 */__pycache__
 */*/__pycache__
 */*/*/__pycache__
