--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ saves
 convolutional_pose_machines_tensorflow/models/weights
 convolutional_pose_machines_tensorflow/output
 convolutional_pose_machines_tensorflow/test_imgs
+*.pyc
+*.swp
 __pycache__
 */__pycache__
 */*/__pycache__
